# gnomeqs-gtk

./: .gitignore  README.md  meson.build  meson_options.txt
app/gtk/: Cargo.toml
app/gtk/data/: io.github.weversonl.GnomeQS.metainfo.xml  io.github.weversonl.GnomeQuickShare.desktop  io.github.weversonl.GnomeQuickShare.gschema.xml  io.github.weversonl.GnomeQuickShare.metainfo.xml
app/gtk/po/: pt_BR.po
app/gtk/src/: bridge.rs  i18n.rs  main.rs  settings.rs
app/gtk/src/ui/: device_tile.rs  pulse.rs  receive_view.rs  send_view.rs  settings_window.rs  transfer_row.rs  window.rs
app/tray-helper/: Cargo.toml
aur/: .SRCINFO  PKGBUILD
build-aux/: cargo-build.sh
core_lib/: Cargo.toml
core_lib/src/: bin.rs  lib.rs  manager.rs  utils.rs  wifi_direct.rs
core_lib/src/hdl/: ble.rs  inbound.rs  mdns.rs  mdns_discovery.rs  mod.rs  outbound.rs
docs/: index.html  script.js  style.css
docs/latest-appimage/: index.html
docs/latest-deb/: index.html
docs/latest-flatpak/: index.html
docs/latest-rpm/: index.html
packaging/appimage/: AppImageBuilder.yml  build-inside-container.sh  build.sh
packaging/deb/: build.sh
packaging/flatpak/: build.sh  cargo-sources.json  io.github.weversonl.GnomeQuickShare.json
packaging/rpm/: gnome-quick-share.spec  gnomeqs.spec
