[package]
name = "gnomeqs_core"
version = "1.4.0"
edition = "2024"
authors = ["weversonl"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "core_bin"
path = "src/bin.rs"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["full"], optional = true }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
dbus = { version = "0.9", features = ["vendored"] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
btleplug = { version = "0.12", optional = true }
bytes = "1.11"
directories = "6.0"
futures = "0.3"
get_if_addrs = "0.5"
gethostname = "1.1"
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
libaes = "0.7"
log = "0.4"
magika = "1.0.1"
mdns-sd = { git = "https://github.com/Martichou/mdns-sd", branch = "unsolicited" }
mime_guess = "2.0"
num-bigint = "0.4"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["copy-dylibs", "download-binaries", "tls-rustls"] }
once_cell = "1.20"
p256 = { version = "0.13", features = ["ecdh"] }
prost = "0.14"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.50", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "time", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.23"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"

[features]
default = ["experimental"]
experimental = ["bluer", "btleplug"]
